--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "expo": "^52.0.7",
     "expo-font": "~13.0.1",
     "expo-status-bar": "~2.0.0",
+    "lucide-react-native": "^0.460.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
-    "react-native-safe-area-context": "4.14.0",
-    "react-native-screens": "4.1.0",
-    "react-native-svg": "15.9.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "4.0.0",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
