--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-native-screens": "4.1.0",
     "react-native-svg": "15.8.0",
     "update": "^0.7.4",
-    "zod": "^3.24.1"
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
