--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.0.3",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/native-stack": "^7.0.2",
+    "axios": "^1.7.9",
     "expo": "^52.0.18",
     "expo-file-system": "~18.0.5",
     "expo-font": "~13.0.1",
