--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-screens": "4.1.0",
     "react-native-svg": "15.8.0",
     "update": "^0.7.4",
-    "yup": "^1.5.0"
+    "yup": "^1.5.0",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
